# geodetic-points

./: .gitignore  OPTIMIZATION.md  README.md  USAGE.md  build.sh  package.xml  requirements.txt  ros2-setup.md  run.sh  setup.cfg  setup.py
doc/: about-VIO缓冲不足与话题映射.md  about-enable_topic_monitoring-issues.md  about-static-tf-updating-in-gps-vio-calibration.md  about-tf-extrapolation-posestamped-attr-error-cloud-frame-assumption.md  about-vio_earth_visualization_node.md  about-启动异常.md  about-现象.md  claude_prompt.md  fix-verification-report.md  how-to-dynamic-gps-tracking-visualization.md  how-to-fix-gps-trajectory-scale-mismatch.md  how-to-integrate-vio-pointcloud-ecef-visualization.md  how-to-scale-and-follow-gps-visualization.md  integration_alignment_report.md  time_sync_topics_explanation.md  topic_monitor_node_issues.md  vio_earth_usage_guide.md  vio_earth_visualization_issue_report.md  空白日志文件产生原因分析.md
geodetic_points/: globe_marker_node.py  gps_on_globe_node.py  gps_vio_calibration_node.py  topic_monitor_node.py  vio_earth_visualization_node.py
launch/: globe_viz.launch.py  multi_gps_viz.launch.py  sigle_calibration_node.launch.py  test_calibration_globe.launch.py  vio_gps_integration.launch.py
meshes/: README.md  earth.dae
plan/: offline_gps_vio_calibration_plan.md  offline_gps_vio_calibration_test_plan.md  test_plan.md
results/: frames_2025-09-04_11.17.08.gv
rviz/: globe_multi_viz.rviz  globe_vio_gps.rviz  globe_viz.rviz
scripts/: bag2kml.py  offline_calibration.py  run.sh
survey/: about-geodetic-compute-library.md  howto-calibrate-gps-odometry.md  (+3 more)
(+5 files in other folders)
